# jawt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: generate.yml  pr-build-jawt-sys.yml  pr-build-jawt.yml  pr-build-tests.yml  pr-build.yml  publish-jawt-sys.yml  publish-jawt.yml  publish.yml
jawt/: Cargo.toml  README.md
jawt-sys/: Cargo.toml  README.md
jawt-sys-generator/: Cargo.toml
jawt-sys-generator/src/: bindings.h  main.rs
jawt-sys/src/: bindings_macos.rs  bindings_unix.rs  bindings_windows.rs  lib.rs
jawt-tests/: .gitignore  Cargo.toml  README.md  build.gradle.kts  local.properties  settings.gradle.kts
jawt-tests/gradle/: libs.versions.toml
jawt-tests/src/main/kotlin/: Main.kt  Rust.kt  RustCanvas.kt
jawt-tests/src/main/rust/: graphics.rs  lib.rs  shader.wgsl
jawt-tests/src/main/rust/graphics/: macos.rs  unix.rs  windows.rs
jawt/src/: awt.rs  ds.rs  dsi.rs  lib.rs  md.rs  rect.rs  version.rs
jawt/src/md/: macos.rs  unix.rs  windows.rs
