[package]
name = "jawt-sys-generator"
description = "Binding generator for jawt-sys"
homepage = "https://github.com/gobley/jawt"
repository = "https://github.com/gobley/jawt"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Chanjung Kim <chanjungkim@paxbun.dev>"]
publish = false

[dependencies]
anyhow = "1"
bindgen = "0.69"
clap = { version = "4", features = ["derive", "cargo", "std"] }
env_logger = "0.11"
log = "0.4"
once_cell = "1"
regex = "1"
reqwest = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
url = "2"
